# primitive_cnn

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  SECURITY.md  TESTING.md  assignment.sh  brain_mri.cxx  infer.sh  result.txt  results.txt
.github/workflows/: ci.yml
apps/: brain_mri.cxx  brain_mri_pgm.cxx  mnist.cxx  mnist_conv.cxx  xor.cxx
benchmarks/: benchmark_conv2d.cxx  benchmark_dot.cxx
data/xor/: xor_points.csv
docs/: architecture.md  windows_machine_run_test.md
include/nn/backend/: cuda_conv2d.h  cuda_dot.h
include/nn/layers/: activation.h  convolutional.h  dense.h  reshape.h
include/nn/loss/: losses.h
include/nn/math/: matrix.h  signal2d.h
src/backend/: cuda_conv2d.cu  cuda_dot.cu
src/layers/: convolutional.cpp  dense.cpp  reshape.cpp
tests/: test_conv_gpu.cxx  test_core.cxx  test_dense_gpu.cxx
tools/: preprocess_brain_mri.py
utils/: activations.h  cuda_conv2d.h  cuda_dot.h  losses.h  scipy.h  utils.h
